add talos patches for longhorn

--- a/talos/patches/global/machine-kubelet.yaml
+++ b/talos/patches/global/machine-kubelet.yaml
@@ -5,3 +5,11 @@ machine:
     nodeIP:
       validSubnets:
         - 192.168.50.0/24
+    extraMounts:
+      - destination: /var/lib/longhorn
+        type: bind
+        source: /var/lib/longhorn
+        options:
+          - bind
+          - rshared
+          - rw
