patch: further changes for storage just on worker nodes

--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -220,3 +220,4 @@ controlPlane:
 worker:
   patches:
     - "@./patches/worker/maschine-nodelabels.yaml"
+    - "@./patches/worker/machine-kubelet.yaml"
