--- a/kubernetes/apps/longhorn-system/longhorn/settings/settings.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn/settings/settings.yaml
@@ -1,13 +1,6 @@
----
 apiVersion: longhorn.io/v1beta2
 kind: Setting
 metadata:
-  name: recurring-job-selector
+  name: auto-attach-recurring-job
   namespace: longhorn-system
-value: |
-  [
-    {
-      "name": "default",
-      "isGroup": true
-    }
-  ]
+value: "true"
