add: patch for talos to deploy tuppr

--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -210,6 +210,7 @@ patches:
   - "@./patches/global/machine-network.yaml"
   - "@./patches/global/machine-sysctls.yaml"
   - "@./patches/global/machine-time.yaml"
+  - "@./patches/global/maschine-features.yaml"
 
 # Controller patches
 controlPlane:
