--- a/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: longhorn
+    - name: grafana
       namespace: longhorn-system
   interval: 1h
   path: ./kubernetes/apps/observability/kube-prometheus-stack/app
