--- a/kubernetes/apps/observability/grafana/instance/kustomization.yaml
+++ b/kubernetes/apps/observability/grafana/instance/kustomization.yaml
@@ -2,9 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: observability
-
 resources:
-  - ./namespace.yaml
-  - ./kube-prometheus-stack/ks.yaml
-  - ./grafana/ks.yaml
+  - ./grafanadatasource.yaml
+  - ./grafana.yaml
+  - ./servicemonitor.yaml
