--- a/kubernetes/apps/observability/grafana/instance/grafana.yaml
+++ b/kubernetes/apps/observability/grafana/instance/grafana.yaml
@@ -29,7 +29,7 @@ spec:
       angular_support_enabled: "true"
     server:
       enable_gzip: "true"
-      root_url: https://grafana.internal.kichi.live
+      root_url: https://grafana.home-ops.dev.nxyzo.com
   deployment:
     spec:
       strategy:
@@ -61,7 +61,7 @@ spec:
   httpRoute:
     spec:
       hostnames:
-        - grafana.internal.kichi.live
+        - grafana.home-ops.dev.nxyzo.com
       parentRefs:
         - name: envoy-internal
           namespace: network
