add accessmode to pvc

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -30,6 +30,8 @@ spec:
         volumeClaimTemplate:
           spec:
             storageClassName: longhorn
+            accessModes:
+              - ReadWriteOnce
             resources:
               requests:
                 storage: 1Gi
