add new pushover secret

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/secret.sops.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
   name: alertmanager-secret
 type: Opaque
 stringData:
-  pushover_api_token: ENC[AES256_GCM,data:axLMOECeQcAurY0=,iv:s9KJPsJwmWAJaUhwQd5/Q3KgFLJW6w/BTDso0gyCh7U=,tag:kZzngob612gd9R8zc6/8jA==,type:str]
-  pushover_api_userkey: ENC[AES256_GCM,data:Mo1TVnF+fawMyQ==,iv:RLQdEH+QETRap85uTQt876FbtdOYksFXx3Um1gKcl1Y=,tag:a3LXx1V+L67p+ykGSJkmMg==,type:str]
+  pushover_api_token: ENC[AES256_GCM,data:pAJLYmXICm6sWmoN9NB3c3yRvZJnKnOj+dNFGS7N,iv:mDMqzcvSr5Sl+omA9j8zjKT89utYavbY7Iwk5fC/NZw=,tag:JV8s/VFKEgssWpCSNzY9Gg==,type:str]
+  pushover_api_userkey: ENC[AES256_GCM,data:JEhChUdxdGfcM70+FC0Y4LAtKphfjVZs4hYyH4FW,iv:yoQ8eHBh3Og0+acl0RxH6Wsm4ufKq7ZwIzV+Np9XRfY=,tag:h9hVZpZOIzfIfRxyZTZS6g==,type:str]
 sops:
   age:
     - recipient: age1gc7a4ma6xs7hnrq52ygv4ay6rlznmqr28s6mjptal2m0ghuf8ptqyqqq9p
@@ -17,8 +17,8 @@ sops:
         cVNTY3R1cGhUaTYwT0g4eHU2TzFWNmcK5yVnvawZ1byAJBhXDDfmuantQFYzub9l
         8Q0w5uyGx6vtoFd7YVjjSYdcOs+3eNEHnRXlu+3W8lEBBWfgAS3LfQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-01-22T19:29:35Z"
-  mac: ENC[AES256_GCM,data:S//2WCIBWQBlQ+R+UQuutyzlt4+4twnkSL6LeyswbbGTcZ3YysW2MX9hpG6liQ2nnTM3w6ZsP8Wbpes70kLJixlOjT2BNwdnx92d1OgWsN0aPGKelmX32j2axcN+gHwL4srvxcMkUhT2XHgOGQG6SgWenQ/wcTqY1RaAi4/SW+8=,iv:Evh56arSEtDrzNtrB3wXjmClBfbgrMFXNk76euu6kwM=,tag:R67Ohl5ygSh/N5EbOief6w==,type:str]
+  lastmodified: "2026-01-22T22:09:57Z"
+  mac: ENC[AES256_GCM,data:vJgLjdyaWvziOhOiWbk2a/zbIT91u/GiPRn2RN/nuMvTr6ck3cPIp4WmNUPxApBIHICYHI75AN4TjmIpjDYSMlrek0wON+xgXcGKDGDKic3OtKSv8k/plgNeBuEjXs5FZBtV20fqV+y/zHtHl9YcvJ01CzFprWWyrwUXmbAFNe0=,iv:N2diLgAeVpt95ttjZk0QhNVx4FdFDsJY88EwM20/SLA=,tag:ydVvzF7mBUP0msae3PoHiQ==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
