add: cert-manager grafana dashboard

--- a/kubernetes/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/ks.yaml
@@ -29,3 +29,24 @@ spec:
     name: flux-system
     namespace: flux-system
   targetNamespace: cert-manager
+---
+# yaml-language-server: $schema=https://lds-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cert-manager-dashboard
+  namespace: cert-manager
+spec:
+  dependsOn:
+    - name: grafana
+      namespace: observability
+  interval: 1h
+  path: ./kubernetes/apps/cert-manager/cert-manager/dashboard
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: cert-manager
+  timeout: 5m
+  wait: false # no flux ks dependents
