--- a/kubernetes/apps/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/ks.yaml
@@ -17,3 +17,24 @@ spec:
     namespace: flux-system
   targetNamespace: flux-system
   wait: true
+---
+# yaml-language-server: $schema=https://lds-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: flux-operator-dashboard
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: grafana
+      namespace: observability
+  interval: 1h
+  path: ./kubernetes/apps/flux-system/flux-operator/dashboard
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: flux-system
+  timeout: 5m
+  wait: false # no flux ks dependents
