--- a/kubernetes/apps/flux-system/flux-operator/dashboard/grafanadashboard.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/dashboard/grafanadashboard.yaml
@@ -12,4 +12,4 @@ spec:
   datasources:
     - datasourceName: prometheus
       inputName: DS_PROMETHEUS
-  url: https://grafana.com/api/dashboards/14936/revisions/1/download
+  url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/cluster.json
