--- a/kubernetes/apps/kube-system/cilium/ks.yaml
+++ b/kubernetes/apps/kube-system/cilium/ks.yaml
@@ -17,3 +17,25 @@ spec:
     namespace: flux-system
   targetNamespace: kube-system
   wait: false
+---
+# yaml-language-server: $schema=https://lds-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cilium-dashboard
+  namespace: kube-system
+spec:
+  dependsOn:
+    - name: cilium
+    - name: grafana
+      namespace: observability
+  interval: 1h
+  path: ./kubernetes/apps/kube-system/cilium/dashboard
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: kube-system
+  timeout: 5m
+  wait: false # no flux ks dependents
