--- a/kubernetes/apps/observability/victoria-logs/dashboard/kustomization.yaml
+++ b/kubernetes/apps/observability/victoria-logs/dashboard/kustomization.yaml
@@ -2,10 +2,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: observability
-
 resources:
-  - ./namespace.yaml
-  - ./kube-prometheus-stack/ks.yaml
-  - ./grafana/ks.yaml
-    - ./victoria-logs/ks.yaml
+  - ./grafanadashboard.yaml
