fix: missing sourceRef

--- a/kubernetes/apps/kube-system/etcd-backup/ks.yaml
+++ b/kubernetes/apps/kube-system/etcd-backup/ks.yaml
@@ -10,3 +10,8 @@ spec:
   prune: true
   wait: true
   timeout: 2m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: kube-system
