--- a/kubernetes/apps/kube-system/etcd-backup/app/secret.sops.yaml
+++ b/kubernetes/apps/kube-system/etcd-backup/app/secret.sops.yaml
@@ -3,16 +3,12 @@ kind: Secret
 metadata:
   name: talos-etcd-s3-keys
   namespace: kube-system
-  # change me - base 64 encoded AWS access key ID
-  accessKeyId: 0T7OVLSPOM2NAVHS0OGO
-  # change me - base64 encoded AWS secret access key
-  secretAccessKey: OA2GNynwBPClnbd1NXjmo2nKweJGuOX2yKLg8sg3
-  # change me - base64 encoded encryption key (generate randomly)
-  resticKey: MjpHO1MoU0dGSDxebzAoP0R+e152Myw5SVZLWnNXUGw=
-  # change me - prefix your bucket URL with s3:
-  bucketName: s3:s3.eu-west-3.wasabisys.com/home-ops-test-etcd-backup
-  # e.g. s3:https://s3.eu-west-2.amazonaws.com/example-bucket
 type: Opaque
+stringData:
+  accessKeyId: ENC[AES256_GCM,data:7QZCBUkJ2fr2Sgc48oN2P47iS3Y=,iv:i+E8V+5cFWIFPpkJtMpeGyoBEioKwUqtBbn7NtwCbiE=,tag:3uxRKrlCcUTDr27hD2S5vQ==,type:str]
+  secretAccessKey: ENC[AES256_GCM,data:ck0uxf7NAw3gsf+xapElRTI33obbuslIZRE/sVF34Ohz8WNxDtANcA==,iv:7B6Z+NkvSj5jG01HdpmKe59H7oVSW3Fn0TsrHtPRBAw=,tag:3CEf316j7nNZtCeSjUgmAw==,type:str]
+  resticKey: ENC[AES256_GCM,data:6vrLiAlYyUj5NBalauVgb83teP9Hlj28chPB38KVDM9EZRl9RmDcnAUIioM=,iv:MvvfC2SyBgd2xVDisyrve06rlyFwOZrU+ptkZuhMZ8o=,tag:iADhdkt8DZdUSlG9RvowrA==,type:str]
+  bucketName: ENC[AES256_GCM,data:531rSMDobC3+geDoYtsHpSPgipFLssZKFf9XQpAo344Swz9P3obbqjKhx86hFFTeTk1GvFtFZg==,iv:pROurLsWh9qJ3ctfUafErQwwEO3ZGXEC+p5pZRywKg8=,tag:iyceX8uAjGfJlyuNuDtfyw==,type:str]
 sops:
   age:
     - recipient: age1gc7a4ma6xs7hnrq52ygv4ay6rlznmqr28s6mjptal2m0ghuf8ptqyqqq9p
@@ -24,8 +20,8 @@ sops:
         ZUdoSXM1RWQ3Y0VySml5Y2Q5NEN1cmcKSQf8AK6YACY5I6qkccRHhfIAiYFd08Nu
         JmJ8JLxdeuViRzT/JtQeshT6DVlsyP458symvD3mJhLNFzvecAjVBg==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2026-01-25T18:50:58Z"
-  mac: ENC[AES256_GCM,data:OYEm28X2ucrbfdgo5Wz9LJef894ViHUvTjBTHrtIwE/1yvDwJeTe1FQ/+78Tdlm6ricUp5U4RrX4UQRcKC5lzWltKcYUJh0Mo0akzk9wqLGc6aSXuS5Xazg2ylhr7SNqdhOlmgQdlmGJ5tcFswM8MhEBqvUi1xpiXrw+Thk0u70=,iv:NeuPi7ijz/CYEqhstxxhbYCGuSk5tMd1W5RdtoMce2E=,tag:AgShVtlCG9DBSIppqhuWSg==,type:str]
+  lastmodified: "2026-01-25T19:46:20Z"
+  mac: ENC[AES256_GCM,data:RPkTE3io7ZX17Cy1XxKLvGOkNXMxJvB3gFPFr58TXXoUHeHO1nqkzoiacMqeHlRlESJ9KQtCkzgpPVsWocddV1bjZkFz1cSVG/MAlgpiCvPRsEDh0BBgcEM75uK36emP7KzP5iA132aaW/cI7ba0lX5x7ZJnh0FJun+cGjgzytQ=,iv:L5qlNYeYxkS9EjaP7B2FoMIg0pmVGxIfDyEVy7pB/7U=,tag:efFMI/4/DcYZJWFTMB0DGA==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.11.0
