--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -33,18 +33,13 @@ spec:
       enabled: false
     hubble:
       enabled: true
-      metrics:
-        - dns
-        - dropped
-        - flows
-        - icmp
-        - l7
-        - tcp
-        - udp
-      ui:
-        enabled: true
       relay:
         enabled: true
+      ui:
+        enabled: true
+      metrics:
+        enableOpenMetrics: true
+        enabled: "{policy:sourceContext=app|workload-name|pod|reserved-identity;destinationContext=app|workload-name|pod|dns|reserved-identity;labelsContext=source_namespace\\,destination_namespace}"
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: "10.42.0.0/16"
