--- a/kubernetes/apps/system-upgrade/tuppr/ks.yaml
+++ b/kubernetes/apps/system-upgrade/tuppr/ks.yaml
@@ -37,12 +37,12 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: tuppr-networkPolicys
+  name: tuppr-networkpolicys
 spec:
   dependsOn:
     - name: tuppr
   interval: 1h
-  path: ./kubernetes/apps/system-upgrade/tuppr/networkPolicys
+  path: ./kubernetes/apps/system-upgrade/tuppr/networkpolicys
   prune: true
   sourceRef:
     kind: GitRepository
