--- a/kubernetes/apps/system-upgrade/tuppr/networkpolicys/np-allow-egress-to-talos-api.yaml
+++ b/kubernetes/apps/system-upgrade/tuppr/networkpolicys/np-allow-egress-to-talos-api.yaml
@@ -5,17 +5,12 @@ metadata:
   name: allow-egress-to-talos-api
   namespace: system-upgrade
 spec:
-  podSelector: {}
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/name: tuppr
   policyTypes:
     - Egress
   egress:
-    - from:
-      - namespaceSelector:
-          matchLabels:
-            kubernetes.io/metadata.name: system-upgrade
-      - podSelector:
-          matchLabels:
-            app.kubernetes.io/name: tuppr
     - to:
         - ipBlock:
             cidr: 192.168.50.0/24
