--- a/kubernetes/apps/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/ks.yaml
@@ -38,3 +38,21 @@ spec:
   targetNamespace: flux-system
   timeout: 5m
   wait: false # no flux ks dependents
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: tuppr-networkpolicys
+spec:
+  dependsOn:
+    - name: tuppr
+  interval: 1h
+  path: ./kubernetes/apps/flux-system/flux-operator/networkpolicys
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: system-upgrade
+  wait: false
