--- a/kubernetes/apps/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/ks.yaml
@@ -43,7 +43,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: tuppr-networkpolicys
+  name: flux-operator-networkpolicys
 spec:
   dependsOn:
     - name: flux-operator
@@ -55,5 +55,5 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: system-upgrade
+  targetNamespace: flux-system
   wait: false
