--- a/kubernetes/apps/system-upgrade/tuppr/networkpolicys/system-upgrade-tuppr-allow-eg-to-k8s-api.yaml
+++ b/kubernetes/apps/system-upgrade/tuppr/networkpolicys/system-upgrade-tuppr-allow-eg-to-k8s-api.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-egress-to-k8s-api
+  name: system-upgrade-tuppr-allow-eg-to-k8s-api
   namespace: system-upgrade
 spec:
   podSelector:
