fix: netpol for tuppr communication to kube-apiserver

--- a/kubernetes/apps/system-upgrade/tuppr/networkpolicys/system-upgrade-tuppr-allow-eg-to-k8s-api.yaml
+++ b/kubernetes/apps/system-upgrade/tuppr/networkpolicys/system-upgrade-tuppr-allow-eg-to-k8s-api.yaml
@@ -11,32 +11,8 @@ spec:
   policyTypes:
     - Egress
   egress:
-    - to:
-        - namespaceSelector:
-            matchLabels:
-              kubernetes.io/metadata.name: kube-system
-          podSelector:
-            matchLabels:
-              app.kubernetes.io/name: kube-apiserver
-      ports:
-        - protocol: TCP
-          port: 6443
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: system-upgrade-tuppr-allow-eg-to-k8s-api-from-host-network
-  namespace: system-upgrade
-spec:
-  podSelector:
-    matchLabels:
-      app.kubernetes.io/name: tuppr
-  policyTypes:
-    - Egress
-  egress:
-    - to:
-        - ipBlock:
-            cidr: 192.168.50.0/24
+    - toEntities:
+      - kube-apiserver
       ports:
         - protocol: TCP
           port: 6443
