fix: netpol to cilium policy

--- a/kubernetes/apps/system-upgrade/tuppr/networkpolicys/system-upgrade-tuppr-allow-eg-to-k8s-api.yaml
+++ b/kubernetes/apps/system-upgrade/tuppr/networkpolicys/system-upgrade-tuppr-allow-eg-to-k8s-api.yaml
@@ -1,18 +1,17 @@
 ---
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
+apiVersion: cilium.io/v2
+kind: CiliumNetworkPolicy
 metadata:
   name: system-upgrade-tuppr-allow-eg-to-k8s-api
   namespace: system-upgrade
 spec:
-  podSelector:
+  endpointSelector:
     matchLabels:
       app.kubernetes.io/name: tuppr
-  policyTypes:
-    - Egress
   egress:
-    - toEntities:
-      - kube-apiserver
-      ports:
-        - protocol: TCP
-          port: 6443
+  - toEntities:
+    - kube-apiserver
+    toPorts:
+    - ports:
+      - port: 6443
+        protocol: TCP
