--- a/kubernetes/apps/flux-system/flux-operator/networkpolicys/source-controller/flux-system-source-controller-allow-ig-from-helm-controller.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/networkpolicys/source-controller/flux-system-source-controller-allow-ig-from-helm-controller.yaml
@@ -1,12 +1,12 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-ingress-from-kustomize-controller
+  name: flux-system-source-controller-allow-ig-from-helm-controller
   namespace: flux-system
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: source-controller
+      app.kubernetes.io/component: source-controller
   policyTypes:
     - Ingress
   ingress:
@@ -16,7 +16,7 @@ spec:
               kubernetes.io/metadata.name: flux-system
           podSelector:
             matchLabels:
-              app.kubernetes.io/name: kustomize-controller
+              app.kubernetes.io/component: helm-controller
       ports:
         - protocol: TCP
           port: 9090
