add: needed policys for source-controller

--- a/kubernetes/apps/flux-system/flux-operator/networkpolicys/source-controller/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/networkpolicys/source-controller/kustomization.yaml
@@ -5,8 +5,10 @@ kind: Kustomization
 namespace: flux-system
 
 resources:
-  - flux-system-source-controller-allow-eg-to-k8s-api.yaml
-  - flux-system-source-controller-allow-eg-to-world.yaml
-  - flux-system-source-controller-allow-ig-from-helm-controller.yaml
-  - flux-system-source-controller-allow-ig-from-host.yaml
-  - flux-system-source-controller-allow-ig-from-kustomize-controller.yaml
+  - ./flux-system-source-controller-allow-eg-to-k8s-api.yaml
+  - ./flux-system-source-controller-allow-eg-to-world.yaml
+  - ./flux-system-source-controller-allow-ig-from-helm-controller.yaml
+  - ./flux-system-source-controller-allow-ig-from-host.yaml
+  - ./flux-system-source-controller-allow-ig-from-kustomize-controller.yaml
+  - ./flux-system-source-controller-allow-eg-to-notification-controller.yaml
+  - ./flux-system-source-controller-allow-eg-to-coredns.yaml
