fix: dns policy for source-controller

--- a/kubernetes/apps/flux-system/flux-operator/networkpolicys/source-controller/flux-system-source-controller-allow-eg-to-coredns.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/networkpolicys/source-controller/flux-system-source-controller-allow-eg-to-coredns.yaml
@@ -17,7 +17,7 @@ spec:
               kubernetes.io/metadata.name: kube-system
           podSelector:
             matchLabels:
-              kubernetes.io/name: CoreDNS
+              app.kubernetes.io/name: coredns
       ports:
         - protocol: UDP
           port: 53
