--- a/kubernetes/apps/flux-system/flux-operator/networkpolicys/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/networkpolicys/kustomization.yaml
@@ -7,5 +7,5 @@ namespace: flux-system
 resources:
   # - ./flux-system-default-deny-all.yaml
   # - ./flux-system-allow-ig-from-prometheus.yaml
-  # - ./flux-system-allow-eg-to-coredns.yaml
   - source-controller
+  - kustomize-controller
