--- a/kubernetes/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/ks.yaml
@@ -50,3 +50,24 @@ spec:
   targetNamespace: cert-manager
   timeout: 5m
   wait: false # no flux ks dependents
+---
+# yaml-language-server: $schema=https://lds-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cert-manager-networkpolicys
+  namespace: cert-manager
+spec:
+  dependsOn:
+    - name: grafana
+      namespace: observability
+  interval: 1h
+  path: ./kubernetes/apps/cert-manager/cert-manager/networkpolicys
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: cert-manager
+  timeout: 5m
+  wait: false # no flux ks dependents
