change netpol pod labels for cainjector

--- a/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cainjector/cert-manager-cainjector-allow-eg-to-k8s-api.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cainjector/cert-manager-cainjector-allow-eg-to-k8s-api.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   endpointSelector:
     matchLabels:
-      app.kubernetes.io/component: cainjector
+      app.kubernetes.io/name: cainjector
   egress:
     - toEntities:
         - kube-apiserver
