--- a/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cainjector/cert-manager-cainjector-allow-eg-to-coredns.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cainjector/cert-manager-cainjector-allow-eg-to-coredns.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/component: cainjector
+      app.kubernetes.io/name: cainjector
   policyTypes:
     - Egress
   egress:
