--- a/kubernetes/apps/cert-manager/cert-manager/networkpolicys/webhook/cert-manager-webhook-allow-eg-to-coredns.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/networkpolicys/webhook/cert-manager-webhook-allow-eg-to-coredns.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/component: webhook
+      app.kubernetes.io/name: webhook
   policyTypes:
     - Egress
   egress:
