--- a/kubernetes/apps/cert-manager/cert-manager/networkpolicys/webhook/cert-manager-webhook-allow-eg-to-k8s-api.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/networkpolicys/webhook/cert-manager-webhook-allow-eg-to-k8s-api.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   endpointSelector:
     matchLabels:
-      app.kubernetes.io/component: webhook
+      app.kubernetes.io/name: webhook
   egress:
     - toEntities:
         - kube-apiserver
