--- a/kubernetes/apps/cert-manager/cert-manager/networkpolicys/webhook/cert-manager-webhook-allow-ig-from-host.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/networkpolicys/webhook/cert-manager-webhook-allow-ig-from-host.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   endpointSelector:
     matchLabels:
-      app.kubernetes.io/component: webhook
+      app.kubernetes.io/name: webhook
   ingress:
     - fromEntities:
         - host
