--- a/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cert-manager/cert-manager-cert-manager-allow-ig-from-host.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cert-manager/cert-manager-cert-manager-allow-ig-from-host.yaml
@@ -3,6 +3,7 @@ kind: CiliumNetworkPolicy
 metadata:
   name: cert-manager-cert-manager-allow-ig-from-host
   namespace: cert-manager
+spec:
   endpointSelector:
     matchLabels:
       app.kubernetes.io/name: cert-manager
