--- a/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cert-manager/cert-manager-cert-manager-allow-ig-from-host.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cert-manager/cert-manager-cert-manager-allow-ig-from-host.yaml
@@ -14,5 +14,5 @@ spec:
         - ports:
             - protocol: TCP
               port: "6080"
-            - protocol:
+            - protocol: TCP
               port: "10250"
