--- a/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cert-manager/cert-manager-cert-manager-allow-ig-from-k8s-api.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/networkpolicys/cert-manager/cert-manager-cert-manager-allow-ig-from-k8s-api.yaml
@@ -8,7 +8,7 @@ spec:
     matchLabels:
       app.kubernetes.io/name: cert-manager
   ingress:
-    - toEntities:
+    - fromEntities:
         - kube-apiserver
       toPorts:
         - ports:
