add: pdb for alertmanager

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -23,6 +23,10 @@ spec:
               namespace: network
       alertmanagerSpec:
         replicas: 3
+        podDisruptionBudget:
+          enabled: true
+          minAvailable: 1
+          unhealthyPodEvictionPolicy: AlwaysAllow
         alertmanagerConfiguration:
           name: alertmanager
         externalUrl: https://alertmanager.home-ops.dev.nxyzo.com
