--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -14,3 +14,6 @@ spec:
       enabled: true
     serviceMonitor:
       enabled: true
+    plugins:
+      - name: victoriametrics-logs-datasource
+        version: v0.25.0
